--- a/docs/modules/onecx-iam-bff/pages/index.adoc
+++ b/docs/modules/onecx-iam-bff/pages/index.adoc
@@ -1,10 +1,9 @@
 include::onecx-iam-bff-attributes.adoc[opts=optional]
 
-== onecx-iam-bff
+= OneCX Identity Access Management Backend For Frontend
 
-include::docs.adoc[opts=optional]
 
-=== Configuration
+== Configuration
 include::onecx-iam-bff.adoc[opts=optional]
 
 include::onecx-iam-bff-docs.adoc[opts=optional]
