--- a/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
+++ b/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
@@ -1,10 +1,12 @@
 
 include::onecx-iam-bff-attributes.adoc[opts=optional]
 
-=== Default properties
+{docker-registry}[Link to Docker registry]
+
+== Default properties
 
 .{properties-file}
-[%collapsible%open]
+[%collapsible]
 ====
 [source,properties,subs=attributes+]
 ----
@@ -27,22 +29,18 @@ quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.enable-security-genera
 ----
 ====
 
-=== Extensions
-
+== Extensions
+.Extensions List
+[%collapsible]
+====
 include::onecx-iam-bff-extensions.adoc[opts=optional]
+====
 
-=== Container
+== Helm
 
-{docker-registry}[Docker registry]
+{helm-registry}[Link to Helm registry]
 
-
-=== Helm
-
-{helm-registry}[Helm registry]
-
-Default values
-
-.{helm-file}
+.Default values in {helm-file}
 [source,yaml]
 ----
 app:
@@ -73,4 +71,3 @@ app:
           kcConfig:
             defaultClientScopes: [ ocx-ia:all, ocx-pm:read ]
 ----
-
